Renaming Atrribute in the data panel does not accont for using the original name or a blank space. #99816

Closed
opened 2022-07-18 14:12:27 +02:00 by Arye Ramaty · 5 comments
Contributor

System Information
Operating system: Linux-5.15.0-41-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.47.03

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-17 00:27, hash: cd1e4ae448
Worked: Works fine in 3.21

Short description of error
While renaming Attributes in the data panel and using the same name as the original (for example, double clicking on the name and right-clicking anywhere else), the unique name operator does not check if this is the same name that was there originally. (the name will get the .001 suffix)
It also doesn't check for a blank space (if you delete the current name and apply, Blender will crash)

Exact steps for others to reproduce the error

  1. Add a Color Attribute / Attribute
  2. Double click on the created attribute
  3. Right-click anywhere else to apply
  4. See that the Attribute gets the .00x suffix

Another option is assigning a blank name which will crash Blender.

P.S
I tried to look into it but it seems I lack some knowledge.

**System Information** Operating system: Linux-5.15.0-41-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.47.03 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-17 00:27, hash: `cd1e4ae448` Worked: Works fine in 3.21 **Short description of error** While renaming Attributes in the data panel and using the same name as the original (for example, double clicking on the name and right-clicking anywhere else), the unique name operator does not check if this is the same name that was there originally. (the name will get the .001 suffix) It also doesn't check for a blank space (if you delete the current name and apply, Blender will crash) **Exact steps for others to reproduce the error** 1. Add a Color Attribute / Attribute 2. Double click on the created attribute 3. Right-click anywhere else to apply 4. See that the Attribute gets the .00x suffix Another option is assigning a blank name which will crash Blender. P.S I tried to look into it but it seems I lack some knowledge.
Author
Contributor

Added subscriber: @aryeramaty

Added subscriber: @aryeramaty
Author
Contributor

The unique name function is in

blender-git/blender/source/blender/blenkernel/intern/attribute.cc

under the name

unique_name_cb

As you can see, the bug is easily solvable. That's why I tried to solve it before submitting the bug report.
I will continue to work on it, but I realize it's safer to report it anyway.

The unique name function is in ``` blender-git/blender/source/blender/blenkernel/intern/attribute.cc ``` under the name ``` unique_name_cb ``` As you can see, the bug is easily solvable. That's why I tried to solve it before submitting the bug report. I will continue to work on it, but I realize it's safer to report it anyway.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Arye Ramaty self-assigned this 2022-07-23 21:51:12 +02:00

This issue was referenced by d567785658

This issue was referenced by d567785658349504dc98c693c8c46c30e9a60c44
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99816
No description provided.